[gd_scene load_steps=16 format=3 uid="uid://dkk3npascg0gk"]

[ext_resource type="Theme" uid="uid://bupib8auxkxug" path="res://Themes/health_text.tres" id="1_2l118"]
[ext_resource type="PackedScene" uid="uid://cef83b544c02e" path="res://Scenes/player.tscn" id="1_bmfin"]
[ext_resource type="Script" path="res://Scripts/mainScene.gd" id="1_qim6l"]
[ext_resource type="Texture2D" uid="uid://ctg77o47rb12o" path="res://Themes/bgGradient.tres" id="2_wlgce"]
[ext_resource type="Script" path="res://Scripts/UI Controller.gd" id="3_4h1rn"]
[ext_resource type="Texture2D" uid="uid://dmqsbt4okllwt" path="res://Themes/fgGradient.tres" id="3_l2xfm"]
[ext_resource type="PackedScene" uid="uid://dqnpa44hn5ouj" path="res://Scenes/ai_pirate.tscn" id="5_s13td"]
[ext_resource type="AudioStream" uid="uid://d3lesx838swq0" path="res://Audio/Kenney/Digital Audio/powerUp4.ogg" id="7_r37cv"]
[ext_resource type="PhysicsMaterial" uid="uid://hrnw75jkur0t" path="res://Physics Materials/wallPhysMat.tres" id="8_upmwm"]
[ext_resource type="PackedScene" uid="uid://b3bou1i4vgrkt" path="res://Scenes/Hammerhead.tscn" id="9_n5ih7"]
[ext_resource type="TileSet" uid="uid://dvj3vhtbk8a7n" path="res://Sprites/Tilemaps/world_boundary.tres" id="11_dcjbu"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hxoum"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ebaeb"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_babm6"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ojhbg"]

[node name="Main Scene" type="Node2D"]
script = ExtResource("1_qim6l")
AIPirateMinimumTime = 5.0
AIPirateMaximumTime = 10.0
hammerheadMinimumTime = 8.0
hammerheadMaximumTime = 10.0
minX = 50
maxX = 1050
minY = 50
maxY = 550

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="UI Controller" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 1100.0
offset_bottom = 600.0
script = ExtResource("3_4h1rn")
AIPirateScore = 100
hammerheadScore = 200
shot = 1.0
headbutted = 2.0
metadata/_edit_lock_ = true

[node name="Health Label" type="Label" parent="UI Controller"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 46.0
theme = ExtResource("1_2l118")
text = "placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score Label" type="Label" parent="UI Controller"]
layout_mode = 1
anchors_preset = -1
offset_top = 46.0
offset_right = 240.0
offset_bottom = 92.0
theme = ExtResource("1_2l118")
theme_override_colors/font_color = Color(0.172549, 1, 0.101961, 1)
text = "Placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="UI Controller"]
clip_children = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.17
anchor_right = 0.229
anchor_bottom = 0.244
offset_top = 0.199997
offset_right = -0.450012
offset_bottom = 0.23999
theme = ExtResource("1_2l118")

[node name="Health Bar" type="TextureProgressBar" parent="UI Controller/Panel"]
show_behind_parent = true
layout_mode = 0
offset_right = 240.0
offset_bottom = 40.0
theme = ExtResource("1_2l118")
value = 25.0
nine_patch_stretch = true
texture_under = ExtResource("2_wlgce")
texture_progress = ExtResource("3_l2xfm")

[node name="Low Health Alarm" type="AudioStreamPlayer" parent="UI Controller"]
stream = ExtResource("7_r37cv")
pitch_scale = 0.5
bus = &"UI Sounds"

[node name="Score Noise" type="AudioStreamPlayer" parent="UI Controller"]
max_polyphony = 5
bus = &"UI Sounds"

[node name="Spawn Timers" type="Node" parent="."]

[node name="AI Pirate Spawn Timer" type="Timer" parent="Spawn Timers"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Hammerhead Spawn Timer" type="Timer" parent="Spawn Timers"]
wait_time = 15.0
autostart = true

[node name="World Bounds" type="Node2D" parent="." groups=["World Bounds"]]
modulate = Color(1, 1, 1, 0.0784314)
z_index = -2
metadata/_edit_group_ = true

[node name="Left" type="StaticBody2D" parent="World Bounds" groups=["World Bounds"]]
position = Vector2(25, 360)
collision_layer = 8
collision_mask = 8
physics_material_override = ExtResource("8_upmwm")

[node name="LeftWall" type="CollisionShape2D" parent="World Bounds/Left" groups=["World Bounds"]]
shape = SubResource("WorldBoundaryShape2D_hxoum")
one_way_collision_margin = 5.0
debug_color = Color(0.839216, 0.278431, 0.678431, 0.419608)

[node name="TileMap" type="TileMap" parent="World Bounds/Left"]
tile_set = ExtResource("11_dcjbu")
cell_quadrant_size = 8
format = 2
layer_0/tile_data = PackedInt32Array(-1, 0, 0, 131071, 0, 0, 262143, 0, 0, 393215, 0, 0, 524287, 0, 0, 655359, 0, 0, 786431, 0, 0, 917503, 0, 0, 1048575, 0, 0, 1179647, 0, 0, 1310719, 0, 0, -131073, 0, 0, -262145, 0, 0, -393217, 0, 0, -524289, 0, 0, -655361, 0, 0, -786433, 0, 0, -917505, 0, 0, -1048577, 0, 0, -1179649, 0, 0, -1310721, 0, 0, -1245185, 0, 0, -1114113, 0, 0, -983041, 0, 0, -851969, 0, 0, -720897, 0, 0, -589825, 0, 0, -458753, 0, 0, -327681, 0, 0, -196609, 0, 0, -65537, 0, 0, 65535, 0, 0, 196607, 0, 0, 327679, 0, 0, 458751, 0, 0, 589823, 0, 0, 720895, 0, 0, 851967, 0, 0, 983039, 0, 0, 1114111, 0, 0, 1245183, 0, 0, 1376255, 0, 1)

[node name="Top" type="StaticBody2D" parent="World Bounds" groups=["World Bounds"]]
position = Vector2(640, 25)
collision_layer = 8
collision_mask = 8
physics_material_override = ExtResource("8_upmwm")

[node name="TopWall" type="CollisionShape2D" parent="World Bounds/Top" groups=["World Bounds"]]
shape = SubResource("WorldBoundaryShape2D_ebaeb")
one_way_collision_margin = 5.0
debug_color = Color(0.839216, 0.278431, 0.678431, 0.419608)

[node name="TileMap" type="TileMap" parent="World Bounds/Top"]
tile_set = ExtResource("11_dcjbu")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 0, 0, -2, 0, 0, -3, 0, 0, -4, 0, 0, -5, 0, 0, -6, 0, 0, -7, 0, 0, -8, 0, 0, -9, 0, 0, -10, 0, 0, -11, 0, 0, -12, 0, 0, -13, 0, 0, -14, 0, 0, -15, 0, 0, -16, 0, 0, -17, 0, 0, -18, 0, 0, -19, 0, 0, -20, 0, 0, -21, 0, 0, -22, 0, 0, -23, 0, 0, -24, 0, 0, -25, 0, 0, -27, 0, 0, -26, 0, 0, -28, 0, 0, -29, 0, 0, -30, 0, 0, -31, 0, 0, -32, 0, 0, -33, 0, 0, -34, 0, 0, -35, 0, 0, -36, 0, 0, -37, 0, 0, -38, 0, 0, -39, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 65536, 0)

[node name="Right" type="StaticBody2D" parent="World Bounds" groups=["World Bounds"]]
position = Vector2(1255, 360)
collision_layer = 8
collision_mask = 8
physics_material_override = ExtResource("8_upmwm")

[node name="RightWall" type="CollisionShape2D" parent="World Bounds/Right" groups=["World Bounds"]]
shape = SubResource("WorldBoundaryShape2D_babm6")
one_way_collision_margin = 5.0
debug_color = Color(0.839216, 0.278431, 0.678431, 0.419608)

[node name="TileMap" type="TileMap" parent="World Bounds/Right"]
tile_set = ExtResource("11_dcjbu")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 65536, 0, -131072, 65536, 0, -196608, 65536, 0, -262144, 65536, 0, -327680, 65536, 0, -393216, 65536, 0, -458752, 65536, 0, -524288, 65536, 0, -589824, 65536, 0, -655360, 65536, 0, -720896, 65536, 0, -786432, 65536, 0, -851968, 65536, 0, -917504, 65536, 0, -983040, 65536, 0, -1048576, 65536, 0, -1114112, 65536, 0, -1179648, 65536, 0, -1245184, 65536, 0, -1310720, 65536, 0, -1376256, 65536, 0, 0, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 524288, 65536, 1, 589824, 65536, 1, 655360, 65536, 1, 720896, 65536, 1, 786432, 65536, 1, 851968, 65536, 1, 917504, 65536, 1, 983040, 65536, 1, 1048576, 65536, 1, 1114112, 65536, 1, 1179648, 65536, 1, 1245184, 65536, 1, 1310720, 65536, 1)

[node name="Bottom" type="StaticBody2D" parent="World Bounds" groups=["World Bounds"]]
position = Vector2(640, 695)
collision_layer = 8
collision_mask = 8
physics_material_override = ExtResource("8_upmwm")

[node name="BottomWall" type="CollisionShape2D" parent="World Bounds/Bottom" groups=["World Bounds"]]
shape = SubResource("WorldBoundaryShape2D_ojhbg")
one_way_collision_margin = 5.0
debug_color = Color(0.839216, 0.278431, 0.678431, 0.419608)

[node name="TileMap" type="TileMap" parent="World Bounds/Bottom"]
tile_set = ExtResource("11_dcjbu")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 1, 65535, 0, 1, 65534, 0, 1, 65533, 0, 1, 65532, 0, 1, 65531, 0, 1, 65530, 0, 1, 65529, 0, 1, 65528, 0, 1, 65527, 0, 1, 65526, 0, 1, 65525, 0, 1, 65524, 0, 1, 65523, 0, 1, 65522, 0, 1, 65521, 0, 1, 65520, 0, 1, 65519, 0, 1, 65518, 0, 1, 65517, 0, 1, 65516, 0, 1, 65515, 0, 1, 65514, 0, 1, 65513, 0, 1, 65512, 0, 1, 65511, 0, 1, 65510, 0, 1, 65509, 0, 1, 65508, 0, 1, 65507, 0, 1, 65506, 0, 1, 65505, 0, 1, 65504, 0, 1, 65503, 0, 1, 65502, 0, 1, 65501, 0, 1, 65500, 0, 1, 65499, 0, 1, 65498, 0, 1, 65497, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 1, 24, 0, 1, 25, 0, 1, 26, 0, 1, 27, 0, 1, 28, 0, 1, 29, 0, 1, 30, 0, 1, 31, 0, 1, 32, 0, 1, 33, 0, 1, 34, 0, 1, 35, 0, 1, 36, 0, 1, 37, 0, 1, 38, 0, 1)

[node name="Player" parent="." instance=ExtResource("1_bmfin")]
position = Vector2(504, 314)

[node name="AI Pirate" parent="." instance=ExtResource("5_s13td")]
position = Vector2(812, 180)

[node name="Hammerhead" parent="." instance=ExtResource("9_n5ih7")]
position = Vector2(560, 228)
metadata/_edit_group_ = true

[connection signal="timeout" from="Spawn Timers/AI Pirate Spawn Timer" to="." method="_enemy_time"]
[connection signal="timeout" from="Spawn Timers/Hammerhead Spawn Timer" to="." method="_hammerhead_time"]
[connection signal="ouchie" from="Player" to="." method="_ouchie"]
[connection signal="shoot" from="Player" to="." method="_on_laser_shoot"]
[connection signal="gotGot" from="AI Pirate" to="UI Controller" method="somebody_got_got"]
[connection signal="ouchie" from="AI Pirate" to="." method="_ouchie"]
[connection signal="shoot" from="AI Pirate" to="." method="_on_laser_shoot"]
[connection signal="gotGot" from="Hammerhead" to="UI Controller" method="somebody_got_got"]
[connection signal="ouchie" from="Hammerhead" to="." method="_ouchie"]
